Added offical courses endpoint to list all

--- a/OpenGrade/appsettings.json
+++ b/OpenGrade/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-		"DefaultConnection": "Server=8CN2150MTC;Database=OpenGrade;Trusted_Connection=True;User ID=will;Password=HighPavement92!;Persist Security Info=True;"
+		"DefaultConnection": "Server=DESKTOP-0VBJTTC;Database=OpenGrade;Trusted_Connection=True;User ID=will;Password=HighPavement92!;Persist Security Info=True;"
   },
 }
